[gd_scene load_steps=54 format=2]

[ext_resource path="res://sprite/cat.png" type="Texture" id=1]
[ext_resource path="res://script/cat.gd" type="Script" id=2]
[ext_resource path="res://scene/Joystick.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprite/cat/stand face/2.png" type="Texture" id=4]
[ext_resource path="res://sprite/cat/stand dos/1.png" type="Texture" id=5]
[ext_resource path="res://sprite/cat/stand dos/2.png" type="Texture" id=6]
[ext_resource path="res://sprite/cat/course face/3.png" type="Texture" id=7]
[ext_resource path="res://sprite/cat/course face/1.png" type="Texture" id=8]
[ext_resource path="res://sprite/cat/course face/2.png" type="Texture" id=9]
[ext_resource path="res://sprite/cat/course face/4.png" type="Texture" id=10]
[ext_resource path="res://sprite/cat/crouse dos/2.png" type="Texture" id=11]
[ext_resource path="res://sprite/cat/crouse dos/3.png" type="Texture" id=12]
[ext_resource path="res://sprite/cat/crouse dos/4.png" type="Texture" id=13]
[ext_resource path="res://sprite/cat/crouse dos/1.png" type="Texture" id=14]
[ext_resource path="res://scene/heart.tscn" type="PackedScene" id=15]
[ext_resource path="res://script/area 2D/hurtbox.gd" type="Script" id=16]
[ext_resource path="res://sprite/cat/attaque/2.png" type="Texture" id=17]
[ext_resource path="res://sprite/cat/attaque/1.png" type="Texture" id=18]
[ext_resource path="res://sprite/cat/attaque/6.png" type="Texture" id=19]
[ext_resource path="res://sprite/cat/attaque/8.png" type="Texture" id=20]
[ext_resource path="res://sprite/cat/attaque/7.png" type="Texture" id=21]
[ext_resource path="res://sprite/cat/attaque/4.png" type="Texture" id=22]
[ext_resource path="res://sprite/cat/attaque/3.png" type="Texture" id=23]
[ext_resource path="res://sprite/cat/attaque/9.png" type="Texture" id=24]
[ext_resource path="res://script/area 2D/hitbox.gd" type="Script" id=25]
[ext_resource path="res://sprite/cat/contre/1.png" type="Texture" id=26]
[ext_resource path="res://sprite/cat/contre/2.png" type="Texture" id=27]
[ext_resource path="res://sprite/cat/contre/3.png" type="Texture" id=28]
[ext_resource path="res://sprite/cat/contre/4.png" type="Texture" id=29]
[ext_resource path="res://sprite/cat/contre/5.png" type="Texture" id=30]
[ext_resource path="res://sprite/cat/stunt/3.png" type="Texture" id=31]
[ext_resource path="res://sprite/cat/stunt/2.png" type="Texture" id=32]
[ext_resource path="res://sprite/cat/stunt/1.png" type="Texture" id=33]
[ext_resource path="res://sprite/cat/stand face/1.png" type="Texture" id=34]
[ext_resource path="res://script/area 2D/blocbox.gd" type="Script" id=35]
[ext_resource path="res://scene/npelotte.tscn" type="PackedScene" id=36]
[ext_resource path="res://sound/cat/sword2.wav" type="AudioStream" id=37]
[ext_resource path="res://sound/cat/pelottesound.wav" type="AudioStream" id=38]
[ext_resource path="res://sound/cat/heal.wav" type="AudioStream" id=39]
[ext_resource path="res://sound/cat/new_pelotte.wav" type="AudioStream" id=40]
[ext_resource path="res://sound/cat/take_damage.wav" type="AudioStream" id=41]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.5, 44.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bouge/hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bouge/blocbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "attaque"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bouge/hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "bloc"
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "course face"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "crouse dos"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "stand dos"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "stand face"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "stunt"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("bouge/Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 32 ), ExtResource( 31 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 27.5, 43 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 24.5, 61.5 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 68, 63 )

[node name="cat" type="Node2D"]
script = ExtResource( 2 )

[node name="bouge" type="KinematicBody2D" parent="."]
position = Vector2( 500, 300 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouge"]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="bouge"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="bouge"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/attaque = SubResource( 8 )
anims/bloc = SubResource( 11 )
"anims/course face" = SubResource( 4 )
"anims/crouse dos" = SubResource( 6 )
"anims/stand dos" = SubResource( 5 )
"anims/stand face" = SubResource( 3 )
anims/stunt = SubResource( 12 )

[node name="hurtbox" type="Area2D" parent="bouge"]
position = Vector2( -500, -300 )
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouge/hurtbox"]
position = Vector2( 498, 301 )
shape = SubResource( 7 )

[node name="hitbox" type="Area2D" parent="bouge"]
script = ExtResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouge/hitbox"]
position = Vector2( -55.5, 0.5 )
shape = SubResource( 9 )

[node name="blocbox" type="Area2D" parent="bouge"]
script = ExtResource( 35 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="bouge/blocbox"]
position = Vector2( 8, 1 )
shape = SubResource( 10 )
disabled = true
one_way_collision = true

[node name="heart" parent="." instance=ExtResource( 15 )]

[node name="npelotte" parent="." instance=ExtResource( 36 )]
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 800, 100 )

[node name="pelottesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )

[node name="swordsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 37 )

[node name="takedamagesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 41 )

[node name="healsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 39 )

[node name="new_pelottesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Joystick" parent="CanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 89, 523 )

[connection signal="area_entered" from="bouge/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_entered" from="bouge/blocbox" to="." method="_on_blocbox_area_entered"]
